force-app/main/default/objects/Membership_Credit_Setting__mdt/Membership_Credit_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Membership Credit Default Logic Criteria and Settings</description>
    <label>Membership Credit Setting</label>
    <pluralLabel>Membership Credit Settings</pluralLabel>
</CustomObject>