force-app/main/default/objects/Membership_Credit_Setting__mdt/fields/Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field__c</fullName>
    <description>API name of the Contact lookup field to reference by the Related Object.</description>
    <inlineHelpText>API name of the Contact lookup field to reference by the Related Object.</inlineHelpText>
    <label>Contact Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>