force-app/main/default/objects/Membership_Credit_Setting__mdt/fields/Hard_Creditor_DCO__c.field-meta.xml
<CustomField>
    <fullName>Hard_Creditor_DCO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Creditor / DCO</label>
    <type>Checkbox</type>
</CustomField>