force-app/main/default/objects/Membership_Credit_Setting__mdt/fields/Is_Rockne__c.field-meta.xml
<CustomField>
    <fullName>Is_Rockne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rockne?</label>
    <type>Checkbox</type>
</CustomField>