force-app/main/default/objects/Membership_Credit_Setting__mdt/fields/Match_Membership_Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Match_Membership_Division_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this field would require the constituent to have an active ucinn_ascendv2__Society_Membership__c record with a ucinn_ascendv2__Giving_Society__r.nd_Division_Code__c that matches with the Hard and Soft Credit record&apos;s nd_Allocation_Division_Code__c</description>
    <inlineHelpText>Enabling this field would require the constituent to have an active ucinn_ascendv2__Society_Membership__c record with a ucinn_ascendv2__Giving_Society__r.nd_Division_Code__c that matches with the Hard and Soft Credit record&apos;s nd_Allocation_Division_Code__c</inlineHelpText>
    <label>Match Membership Division Code</label>
    <type>Checkbox</type>
</CustomField>