force-app/main/default/objects/Membership_Credit_Setting__mdt/fields/Unrestricted_Type__c.field-meta.xml
<CustomField>
    <fullName>Unrestricted_Type__c</fullName>
    <description>Unrestricted Type of the Designation of the Gift</description>
    <label>Unrestricted Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UNIVUNR</fullName>
                <default>true</default>
                <label>UNIVUNR</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>