force-app/main/default/objects/Membership_Credit_Setting__mdt/validationRules/Hard_Creditor_DCO_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Hard_Creditor_DCO_Only</fullName>
    <active>true</active>
    <description>Validation for Hard Creditor / DCO field</description>
    <errorConditionFormula>IF(AND(Hard_Creditor_DCO__c,OR(NOT(ISBLANK(TEXT(Related_Object__c))),NOT(ISBLANK(Object_Filter_Crtieria__c)),NOT(ISBLANK(Contact_Field__c)))), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Related Object, Object Filter Crtieria and Contact Field cannot have a value if Hard Creditor / DCO is checked.</errorMessage>
</ValidationRule>