force-app/main/default/objects/Membership_Credit_Setting__mdt/validationRules/Require_Contact_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contact_Field</fullName>
    <active>true</active>
    <description>Contact Field is Required when Related Object is not blank.</description>
    <errorConditionFormula>AND(ISBLANK(Contact_Field__c), NOT(ISBLANK(TEXT(Related_Object__c))))</errorConditionFormula>
    <errorDisplayField>Contact_Field__c</errorDisplayField>
    <errorMessage>Contact Field is required when Related Object is populated.</errorMessage>
</ValidationRule>