force-app/main/default/objects/Membership_Credit_Setting__mdt/validationRules/Validate_Match_Membership_Division_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Match_Membership_Division_Code</fullName>
    <active>true</active>
    <errorConditionFormula>Match_Membership_Division_Code__c == true &amp;&amp; NOT(ISPICKVAL(Related_Object__c,&apos;ucinn_ascendv2__Society_Membership__c&apos;))</errorConditionFormula>
    <errorMessage>When Match Membership Division Code is checked, the Related Object must have a value of  Society Membership.</errorMessage>
</ValidationRule>